balooctl, baloosearch, balooshow: Fix order of QCoreApplication object creation

Summary:
QCoreApplication object should exist at the moment when
KAboutData::setApplicationData() is called. And it should be created
even before KAboutData object.

BUG: 378539

Test Plan:
As was mentioned in bug, swapping those two lines and recompiling
resolves the issue. No warning displayed anymore.

Reviewers: #frameworks, aacid, ltoscano

Reviewed By: ltoscano

Subscribers: ltoscano

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D5516